--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~11.2.4",
     "@ngrx/effects": "^11.0.1",
     "@ngrx/store": "^11.0.1",
+    "angular-cli-ghpages": "^1.0.0-rc.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
